test/Eval/binary-ops-overflow.src
// V %srcc --sema --verify %s
program test;

// TODO: Test more operations.

eval 1 << 63;      // expected-error: Arithmetic error: '<<': integer overflow
eval 1 <<< 64;     // expected-error: Arithmetic error: '<<<': shift amount exceeds bit width
eval 1 <<< 111111; // expected-error: Arithmetic error: '<<<': shift amount exceeds bit width

eval (1 <<< 63) - 1; // expected-error: Arithmetic error: '-': integer overflow
eval -(1 <<< 63)   ; // expected-error: Arithmetic error: '-': integer overflow

// FIXME: The locations of these errors are reported in the implicitly generated
// '**' function; this should be fixed once we it as an actual template in the
// preamble (which doesn’t exist yet).
eval 100 ** 100;   // expected-error@*: Arithmetic error: '*': integer overflow
eval 0 ** -1;      // expected-error@*: Arithmetic error: '**': attempting to raise 0 to a negative power
eval 0 ** -100;    // expected-error@*: Arithmetic error: '**': attempting to raise 0 to a negative power
